--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">C</span>
           </h1>
           <div class="subheading mb-5">Calicut, Kerala, India
-            <a href="mailto:name@email.com">name@email.com</a>
+            <a href="mailto:name@email.com">sreelal.c@live.com</a>
           </div>
           <p class="mb-5">I am experienced in leveraging best of technology in developing complex applications. Focused on acquiring and implementing latest technologies.</p>
           <ul class="list-inline list-social-icons mb-0">
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/Sreelalc_">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -90,7 +90,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/sreelalc/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -98,7 +98,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/Sreelal-c">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
