--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="subheading mb-5">Trivandrum, Kerala, India
             <a href="mailto:sreelal.c@live.com">sreelal.c@live.com</a>
           </div>
-          <p class="mb-5">Technology Enthusiast. Opensource Advocate.</p>
+          <p class="mb-5">Technology Enthusiast. Opensource Advocate. Learning and Evolving.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/sreelal.chalil">
@@ -124,9 +124,9 @@
           
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Software Developer</h3>
+              <h3 class="mb-0">Software Engineer</h3>
               <div class="subheading mb-3">Tata Consultancy Services</div>
-           <!--    <p> Developing mission critical softwares with optimal peformance and defects. </p> -->
+                 <p> Java, Spring PostgreSQL, GWT </p> 
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2019 - Present</span>
@@ -165,7 +165,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Veda Vyasa Vidhyalayam</h3>
+              <h3 class="mb-0">Vedavyasa Vidhyalayam, Kozhikode</h3>
               <div class="subheading mb-3">All Inida Secondary School Certificate Exam (AISSCE)</div>
               <div>Computer Science Stream</div>
             
@@ -236,7 +236,7 @@
             <li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+             UX -  Mobile-First, Responsive Design</li>
             <li>
               <i class="fa-li fa fa-check"></i>
              Testing, Cross Browser Testing &amp; Debugging</li>
@@ -245,7 +245,7 @@
               Cross Functional Teams</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Agile Development </li>
           </ul>
         </div>
       </section>
@@ -253,8 +253,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. I enjoy biking, nd exploring the city around.</p>
-          <p class="mb-0">When forced indoors, I watch movies and infortainment television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors. I enjoy biking, and exploring the city around.</p>
+          <p class="mb-0">When forced indoors, I watch movies and infortainment television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements and tools.</p>
         </div>
       </section>
 
@@ -262,7 +262,12 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
-            <li>
+             <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Learning Acheivement Award - Tata Consultancy Service
+              </li>
+
+              <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
                1<sup>st</sup> Runner up of Google Map My Home Project
               </li>
