--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Engineer</h3>
               <div class="subheading mb-3">Tata Consultancy Services</div>
-                 <p> I have worked in the design, development and maintanance phases of enterprise applications and mission critical systems in Java and Spring technologies. Worked on multiple Agile projects in the Banking and Financial Service Domain using Java Technologies. I have good exposure in BFSI domain and Agile Methodology. Apart from that I have working knowledge in Linux environments, JIRA, Git/GitHub, and Code Quality Assurance tools like SonarQube and Fortify.
+                 <p class="text-justify"> I have worked in the design, development and maintenance phases of enterprise applications and mission critical systems in Java and Spring technologies. Worked on multiple Agile projects in the Banking and Financial Service Domain using Java Technologies. I have good exposure in BFSI domain and Agile Methodology. Apart from that I have working knowledge in Linux environments, JIRA, Git/GitHub, and Code Quality Assurance tools like SonarQube and Fortify.
                  </p>
-                 <p>
+                 <p class="text-justify">
                     Technologies: Java, Spring, Spring MVC, GWT, PostgreSQL, Linux.
                 </p> 
             </div>
@@ -142,7 +142,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Development </h3>
               <div class="subheading mb-3">[Freelancing]</div>
-              <p>Dynamically procrastinate B2C users and created sophiticated landing pages and promote digital presence for various businesses and organisations throgh websites, search engine optimisations and socal media promotions</p>
+              <p class="text-justify">Dynamically procrastinate B2C users and created sophiticated landing pages and promote digital presence for various businesses and organisations throgh websites, search engine optimisations and socal media promotions</p>
               <p>Development of Ecommerce and Affiliate Marketting Projects in Php/Laravel technologies.</p>
             </div>
             <div class="resume-date text-md-right">
@@ -278,8 +278,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a developer, I enjoy most of my time being outdoors. I enjoy biking, and exploring the city around.</p>
-          <p class="mb-0">When forced indoors, I watch movies and infortainment television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements and tools.</p>
+          <p class="text-justify">Apart from being a developer, I enjoy most of my time being outdoors. I enjoy biking, and exploring the city around.</p>
+          <p class="text-justify mb-0">When forced indoors, I watch movies and infortainment television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements and tools.</p>
         </div>
       </section>
 
